# causalipy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
causalipy/: custom_types.py  logistic_regression.py  ols.py
causalipy/did/: doubly_robust.py  doubly_robust_alt.py  multi_periods.py  twfe.py
metrics/: custom_types.py  logistic_regression.py  ols.py
metrics/did/: doubly_robust.py  dr.py  ipw.py  main.py  multi_periods.py  multiple_time_periods.py  or.py
tests/: conftest.py  test_ols.py
tests/data/: sim-ds.feather
tests/did/: test_doubly_robust.py  test_doubly_robust_alt.py  test_multi_periods.py  test_twfe.py
