[tool.poetry]
name = "causalipy"
version = "0.1.0"
description = "Econometrics for Python"
authors = ["Moritz Helm <mohelm84@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
patsy = "^0.5.2"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pyarrow = "^6.0.1"
pytest-mock = "^3.6.1"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
line_length="100"
indent='    '
multi_line_output="3"
length_sort="1"
import_heading_stdlib="Core Library"
import_heading_firstparty="First party"
import_heading_thirdparty="Third party"
import_heading_localfolder="Local"
include_trailing_comma=true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
